--- a/app/locale/pt_BR/LC_MESSAGES/django.po
+++ b/app/locale/pt_BR/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-09-01 22:44-0300\n"
+"POT-Creation-Date: 2016-09-02 17:13-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -18,113 +18,66 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
-#: app/templates/app/base.html:10
-msgid "The Project"
-msgstr ""
-
-#: app/templates/app/base.html:11
-msgid "CCTE Group"
-msgstr ""
-
-#: app/templates/app/base.html:14
-msgid "Hi"
-msgstr ""
-
-#: app/templates/app/base.html:16
-msgid "See Profile"
-msgstr ""
-
-#: app/templates/app/base.html:17
-msgid "Settings"
-msgstr ""
-
-#: app/templates/app/base.html:18
-msgid "Logout"
-msgstr ""
-
-#: app/templates/app/index.html:6
-msgid "You have:"
-msgstr ""
-
-#: app/templates/app/index.html:10
-msgid "Pending Tasks"
-msgstr ""
-
-#: app/templates/app/index.html:14
-msgid "Users Online"
-msgstr ""
-
-#: app/templates/app/index.html:20
-msgid "You can:"
-msgstr ""
-
-#: app/templates/app/index.html:24 app/templates/home_app.html:26
+#: app/templates/app/index.html:24 app/templates/home_professor.html:23
 msgid "Create Course"
 msgstr "Criar Curso"
 
-#: app/templates/app/index.html:29
-msgid "Manage Users"
-msgstr ""
-
-#: app/templates/app/index.html:33
-msgid "Manage Courses"
-msgstr ""
-
-#: app/templates/app/index.html:37
-msgid "Gerenciar Categorias"
-msgstr ""
-
-#: app/templates/app/index.html:45
-msgid "Your course(s):"
-msgstr ""
-
-#: app/templates/app/index.html:46
-msgid "No courses subscribed yet"
-msgstr ""
-
-#: app/templates/app/index.html:56
-msgid "Search course:"
-msgstr ""
-
-#: app/templates/app/index.html:62
-msgid "Search"
-msgstr ""
-
-#: app/templates/app/index.html:67
-msgid "Most popular keywords:"
-msgstr ""
-
-#: app/templates/home_app.html:14
+#: app/templates/home_professor.html:9 app/templates/home_student.html:9
 msgid "Home"
 msgstr "Início"
 
-#: app/templates/home_app.html:22
+#: app/templates/home_professor.html:18 app/templates/home_student.html:18
+msgid "Menu"
+msgstr "Menu"
+
+#: app/templates/home_professor.html:22
 msgid "Pending tasks"
 msgstr "Tarefas Pendentes"
 
-#: app/templates/home_app.html:23
-msgid "Users Online (1)"
-msgstr "Pessoas Online (1)"
-
-#: app/templates/home_app.html:24
-msgid "Course"
-msgstr "Curso"
-
-#: app/templates/home_app.html:27
+#: app/templates/home_professor.html:24
 msgid "Manage Course"
 msgstr "Gerenciar Curso"
 
-#: app/templates/home_app.html:35
+#: app/templates/home_professor.html:31
 msgid "Courses"
 msgstr "Cursos"
 
-#: app/templates/home_app.html:51
+#: app/templates/home_professor.html:40
+msgid "Students:"
+msgstr "Alunos"
+
+#: app/templates/home_professor.html:41
+msgid "Beginning:"
+msgstr "Começo"
+
+#: app/templates/home_professor.html:42
+msgid "End:"
+msgstr "Fim"
+
+#: app/templates/home_professor.html:48
 msgid "You didn't create any course yet."
 msgstr "Você não criou nenhum curso ainda."
 
-#: app/templates/home_app.html:59
+#: app/templates/home_professor.html:54 app/templates/home_student.html:60
 msgid "Goals"
 msgstr "Metas"
 
-#~ msgid "Amadeus"
-#~ msgstr "Amadeus"
+#: app/templates/home_student.html:22
+msgid "Profile"
+msgstr "Perfil"
+
+#: app/templates/home_student.html:23
+msgid "My Courses"
+msgstr "Meus Cursos"
+
+#: app/templates/home_student.html:24
+msgid "Google accounts"
+msgstr "Contas do Google"
+
+#: app/templates/home_student.html:31
+msgid "Notifications"
+msgstr "Notificações"
+
+#: app/templates/home_student.html:63
+msgid "Favorites"
+msgstr "Favoritos"
