--- a/poll/locale/pt_BR/LC_MESSAGES/django.po
+++ b/poll/locale/pt_BR/LC_MESSAGES/django.po
@@ -24,108 +24,108 @@ msgstr ""
 
 #: poll/models.py:11 poll/models.py:32
 msgid "Poll"
-msgstr ""
+msgstr "Enquete"
 
 #: poll/models.py:12
 msgid "Polls"
-msgstr ""
+msgstr "Enquetes"
 
 #: poll/models.py:18 poll/models.py:24 poll/templates/poll/answer.html:11
 #: poll/templates/poll/answer_student.html:27
 #: poll/templates/poll/create.html:68 poll/templates/poll/create.html:85
 #: poll/templates/poll/view.html:33
 msgid "Answer"
-msgstr ""
+msgstr "Reposta"
 
 #: poll/models.py:19
 msgid "Order"
-msgstr ""
+msgstr "Ordem"
 
 #: poll/models.py:20 poll/models.py:25
 msgid "Answers"
-msgstr ""
+msgstr "Repostas"
 
 #: poll/models.py:31
 msgid "Answered"
-msgstr ""
+msgstr "Respondido"
 
 #: poll/models.py:33
 msgid "Answers Students"
-msgstr ""
+msgstr "Respostas dos estudantes"
 
 #: poll/models.py:34
 msgid "Student"
-msgstr ""
+msgstr "Estudante"
 
 #: poll/models.py:35
 msgid "Answered Date"
-msgstr ""
+msgstr "Data de resposta"
 
 #: poll/models.py:38
 msgid "Answer Stundent"
-msgstr ""
+msgstr "Resposta do estudante"
 
 #: poll/models.py:39
 msgid "Answers Student"
-msgstr ""
+msgstr "Respostas dos estudantes"
 
 #: poll/templates/poll/answer.html:12 poll/templates/poll/create.html:69
 #: poll/templates/poll/create.html:86
 msgid "Possible answer for the question"
-msgstr ""
+msgstr "Possível resposta para a questão"
 
 #: poll/templates/poll/create.html:22
 msgid "Create a Poll"
-msgstr ""
+msgstr "Criar enquete"
 
 #: poll/templates/poll/create.html:38
 msgid "Question?"
-msgstr ""
+msgstr "Pergunta?"
 
 #: poll/templates/poll/create.html:39
 msgid "A Question to be answered"
-msgstr ""
+msgstr "A questão a ser respondida"
 
 #: poll/templates/poll/create.html:154
 msgid "Close"
-msgstr ""
+msgstr "Fechar"
 
 #: poll/templates/poll/create.html:157
 msgid "Create"
-msgstr ""
+msgstr "Criar"
 
 #: poll/templates/poll/remove.html:7
 msgid "Delete Poll"
-msgstr ""
+msgstr "Deletar enquete"
 
 #: poll/templates/poll/remove.html:15
 msgid "Are you sure you want to delete the subject"
-msgstr ""
+msgstr "Tem certeza que deseja deletar este assunto"
 
 #: poll/templates/poll/remove.html:19
 msgid "Delete"
-msgstr ""
+msgstr "Deletar"
 
 #: poll/templates/poll/update.html:7
 msgid "Update a Poll"
-msgstr ""
+msgstr "Atualizar enquete"
 
 #: poll/templates/poll/update.html:12
 msgid "Update"
-msgstr ""
+msgstr "Atualizar"
 
 #: poll/templates/poll/view.html:17
 msgid "Limit date:"
-msgstr ""
+msgstr "Data limite:"
 
 #: poll/templates/poll/view.html:20
 msgid "Status:"
-msgstr ""
+msgstr "Status:"
 
 #: poll/templates/poll/view.html:22
 msgid "Poll answered"
-msgstr ""
+msgstr "Enquete respondida"
 
 #: poll/templates/poll/view.html:24
 msgid "Poll don't yet answered"
-msgstr ""
+msgstr "A enquete não foi respondida ainda"
