--- a/forum/locale/pt_BR/LC_MESSAGES/django.po
+++ b/forum/locale/pt_BR/LC_MESSAGES/django.po
@@ -20,88 +20,88 @@ msgstr ""
 
 #: forum/forms.py:11
 msgid "Title"
-msgstr ""
+msgstr "Título"
 
 #: forum/forms.py:12 forum/models.py:14
 #: forum/templates/forum/forum_list.html:23
 #: forum/templates/forum/forum_view.html:58
 #: forum/templates/forum/render_forum.html:4
 msgid "Description"
-msgstr ""
+msgstr "Descrição"
 
 #: forum/forms.py:13
 msgid "Limit Date"
-msgstr ""
+msgstr "Data limite"
 
 #: forum/forms.py:16
 msgid "Forum title"
-msgstr ""
+msgstr "Título do fórum"
 
 #: forum/forms.py:17
 msgid "What is this forum about?"
-msgstr ""
+msgstr "Qual o assunto deste fórum?"
 
 #: forum/forms.py:18
 msgid "Limit date for students post on this forum"
-msgstr ""
+msgstr "Data limite para estudantes postarem neste fórum"
 
 #: forum/forms.py:33 forum/forms.py:46
 msgid "Message"
-msgstr ""
+msgstr "Mensagem"
 
 #: forum/models.py:15 forum/models.py:33 forum/models.py:61
 msgid "Modification Date"
-msgstr ""
+msgstr "Data de modificação"
 
 #: forum/models.py:16
 msgid "Create Date"
-msgstr ""
+msgstr "Data de criação"
 
 #: forum/models.py:19 forum/models.py:35
 #: forum/templates/forum/forum_view.html:16
 #: forum/templates/forum/forum_view.html:116
 msgid "Forum"
-msgstr ""
+msgstr "Fórum"
 
 #: forum/models.py:20
 msgid "Foruns"
-msgstr ""
+msgstr "Fóruns"
 
 #: forum/models.py:31 forum/models.py:58
 msgid "Autor"
-msgstr ""
+msgstr "Autor"
 
 #: forum/models.py:32
 msgid "Post message"
-msgstr ""
+msgstr "Postar mensagem"
 
 #: forum/models.py:34
 msgid "Post Date"
-msgstr ""
+msgstr "Data de postagem"
 
 #: forum/models.py:38 forum/models.py:59
 msgid "Post"
-msgstr ""
+msgstr "Postar"
 
 #: forum/models.py:39
 msgid "Posts"
-msgstr ""
+msgstr "Postagens"
 
 #: forum/models.py:60
 msgid "Answer message"
-msgstr ""
+msgstr "Resposta"
 
 #: forum/models.py:62
 msgid "Answer Date"
-msgstr ""
+msgstr "Data da resposta"
 
 #: forum/models.py:65
 msgid "Post Answer"
-msgstr ""
+msgstr "Postar resposta"
 
 #: forum/models.py:66
 msgid "Post Answers"
-msgstr ""
+msgstr "Postar respostas"
 
 #: forum/templates/forum/forum_list.html:16
 #: forum/templates/forum/forum_view.html:44
@@ -112,73 +112,73 @@ msgstr ""
 #: forum/templates/post_answers/post_answer_load_more_render.html:17
 #: forum/templates/post_answers/post_answer_render.html:15
 msgid "Edit"
-msgstr ""
+msgstr "Editar"
 
 #: forum/templates/forum/forum_list.html:17
 #: forum/templates/forum/forum_view.html:45
 msgid "Are you sure you want to delete this forum?"
-msgstr ""
+msgstr "Tem certeza que deseja deletar este fórum?"
 
 #: forum/templates/forum/forum_list.html:17
 #: forum/templates/forum/forum_view.html:45
 msgid "Delete"
-msgstr ""
+msgstr "Deletar"
 
 #: forum/templates/forum/forum_list.html:24
 #: forum/templates/forum/forum_view.html:59
 #: forum/templates/forum/render_forum.html:5
 msgid "Opened in"
-msgstr ""
+msgstr "Aberto em"
 
 #: forum/templates/forum/forum_list.html:59
 #: forum/templates/forum/forum_view.html:91
 #: forum/templates/post_answers/post_answer_form.html:38
 msgid "send"
-msgstr ""
+msgstr "Enviar"
 
 #: forum/templates/forum/forum_view.html:13
 msgid "Home"
-msgstr ""
+msgstr "Início"
 
 #: forum/templates/forum/forum_view.html:27
 msgid "Menu"
-msgstr ""
+msgstr "Menu"
 
 #: forum/templates/forum/forum_view.html:31
 msgid "Profile"
-msgstr ""
+msgstr "Perfil"
 
 #: forum/templates/forum/forum_view.html:32
 msgid "My Courses"
-msgstr ""
+msgstr "Meus cursos"
 
 #: forum/templates/forum/forum_view.html:40
 msgid "Actions"
-msgstr ""
+msgstr "Ações"
 
 #: forum/templates/forum/forum_view.html:44
 msgid "Forum edited successfully!"
-msgstr ""
+msgstr "Fórum editado com sucesso!"
 
 #: forum/templates/forum/forum_view.html:124
 msgid "Close"
-msgstr ""
+msgstr "Fechar"
 
 #: forum/templates/forum/forum_view.html:125
 msgid "Update"
-msgstr ""
+msgstr "Atualizar"
 
 #: forum/templates/post/post_list.html:11
 #: forum/templates/post/post_load_more_render.html:11
 #: forum/templates/post/post_render.html:9
 msgid "reply"
-msgstr ""
+msgstr "Responder"
 
 #: forum/templates/post/post_list.html:20
 #: forum/templates/post/post_load_more_render.html:20
 #: forum/templates/post/post_render.html:18
 msgid "Post edited successfully!"
-msgstr ""
+msgstr "Post editado com sucesso!"
 
 #: forum/templates/post/post_list.html:21
 #: forum/templates/post/post_load_more_render.html:21
@@ -187,7 +187,7 @@ msgstr ""
 #: forum/templates/post_answers/post_answer_load_more_render.html:18
 #: forum/templates/post_answers/post_answer_render.html:16
 msgid "Remove"
-msgstr ""
+msgstr "Remover"
 
 #: forum/templates/post/post_list.html:30
 #: forum/templates/post/post_load_more_render.html:30
@@ -196,7 +196,7 @@ msgstr ""
 #: forum/templates/post_answers/post_answer_load_more_render.html:26
 #: forum/templates/post_answers/post_answer_render.html:24
 msgid "ago"
-msgstr ""
+msgstr "atrás"
 
 #: forum/templates/post/post_list.html:32
 #: forum/templates/post/post_load_more_render.html:32
@@ -205,46 +205,46 @@ msgstr ""
 #: forum/templates/post_answers/post_answer_load_more_render.html:28
 #: forum/templates/post_answers/post_answer_render.html:26
 msgid "Edited"
-msgstr ""
+msgstr "Editado"
 
 #: forum/templates/post/post_list.html:54 forum/views.py:196
 msgid "Load more posts"
-msgstr ""
+msgstr "Carregar mais postagens"
 
 #: forum/templates/post/post_update_form.html:32
 #: forum/templates/post_answers/post_answer_form.html:32
 msgid "Cancel"
-msgstr ""
+msgstr "Cancelar"
 
 #: forum/templates/post/post_update_form.html:33
 #: forum/templates/post_answers/post_answer_form.html:33
 msgid "Save changes"
-msgstr ""
+msgstr "Salvar mudanças"
 
 #: forum/templates/post_answers/post_answer_list.html:17
 #: forum/templates/post_answers/post_answer_load_more_render.html:17
 #: forum/templates/post_answers/post_answer_render.html:15
 msgid "Answer edited sucessfully!"
-msgstr ""
+msgstr "Resposta editada com sucesso!"
 
 #: forum/templates/post_answers/post_answer_list.html:18
 #: forum/templates/post_answers/post_answer_load_more_render.html:18
 #: forum/templates/post_answers/post_answer_render.html:16
 msgid "Are you sure you want to delete this answer?"
-msgstr ""
+msgstr "Tem certeza que deseja deletar esta resposta?"
 
 #: forum/templates/post_answers/post_answer_list.html:42 forum/views.py:295
 msgid "Load more answers"
-msgstr ""
+msgstr "Carregar mais respostas"
 
 #: forum/views.py:130
 msgid "Forum deleted successfully."
-msgstr ""
+msgstr "Fórum deletado com sucesso."
 
 #: forum/views.py:253
 msgid "Post deleted successfully."
-msgstr ""
+msgstr "Postagem deletada com sucesso."
 
 #: forum/views.py:365
 msgid "Post answer deleted successfully."
-msgstr ""
+msgstr "Resposta deletada com sucesso."
